docs: :bug: fixed logo and z-index on navbar

--- a/apps/docs/src/app/styles/global.css
+++ b/apps/docs/src/app/styles/global.css
@@ -14,6 +14,10 @@
 	@apply border-none!;
 }
 
+#nd-subnav {
+	z-index: 30 !important;
+}
+
 :root {
 	--color-fd-primary: hsl(172 72.2% 48%);
 	--fd-layout-width: 1400px !important;
